--- a/nine_diouma/index_diouma_nine.html
+++ b/nine_diouma/index_diouma_nine.html
@@ -77,7 +77,7 @@
 					</ol>
 				</article>
 			</section>
-			
+
 			<section>
 			<div id="main-container">
 
@@ -120,6 +120,60 @@
 
 	    </div>
 		</section>
+
+		<section>
+			<div id="harysson_jeremie">
+				<header>
+					<h1>HALLO!</h1>
+					<i class=""></i>
+				</header>
+				<div class="fa-ul menu">
+					<a href="#">
+						<i class="fa fa-user-plus"></i>
+						Login/Register
+					</a>
+					<hr></hr>
+					<a href="#">
+						<i class="fa fa-cog"></i>
+							Settings
+					</a>
+					<hr></hr>
+					<a href="#">
+						<i class="fa fa-th-list"></i>
+							Sources
+					</a>
+					<hr></hr>
+					<a href="#">
+						<i class="fa fa-th-large"></i>
+							Layouts
+					</a>
+					<hr></hr>
+					<a href="#">
+						<i class="fa fa-comment"></i>
+							Feedback
+					</a>
+					<hr></hr>
+					<a href="#">
+						<i class=" fa fa-apple"></i>
+							Panda IOS Lite
+					</a>
+					<hr></hr>
+					<a href="#">
+						<i class="fa fa-envelope"></i>
+							Panda Weekly
+					</a>
+					<hr></hr>
+				</div>
+				<footer>
+					<div class="foot">
+					Work for the best startups
+					</div>
+					<img src="images/hired.png" />
+
+				<div class="version">
+					version simplon
+				</div>
+			</section>
     </main>
 ​
     <footer>
