--- a/index_hary_jerem.html
+++ b/index_hary_jerem.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
         <meta charset="utf-8">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
         <link type="text/css" rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link type="text/css" rel="stylesheet" href="css/usepanda.css">
@@ -11,9 +12,10 @@
 			<div id="harysson_jeremie">
 				<header>
 					<h1>HALLO!</h1>
-					<i class=""></i>
+					<a href="https://www.youtube.com/watch?v=p8oi6M4z_e0">
+					<i class="fa fa-times-circle fa-2x"></i></a>
 				</header>
-				<div class="fa-ul menu">
+				<div class="menu">
 					<a href="#">
 						<i class="fa fa-user-plus"></i>
 						Login/Register
@@ -56,11 +58,9 @@
 					</div>
 					<img src="images/hired.png" />
 
-				<div class="version">
-					version simplon
-				</div>
-
-
+					<div class="version">
+						version simplon
+					</div>
 				</footer>
 
 
