--- a/index_hary_jerem.html
+++ b/index_hary_jerem.html
@@ -54,7 +54,7 @@
 				</div>
 				<footer>
 					<div class="foot">
-					Work for the best startups
+					Devs & Designers: Get 5+ Job Offers now
 					</div>
 					<img src="images/hired.png" />
 
