--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 <div id="harysson_jeremie">
 	<header>
 		<h1>HALLO!</h1>
-		<a href="https://www.youtube.com/watch?v=p8oi6M4z_e0" target="_blank">
+		<a href="#" target="_blank">
 		<i class="fa fa-times-circle fa-2x"></i></a>
 	</header>
 	<div class="menu">
